recursion.lessons.recursion.koch.Crab.scala.error
Crab:7: error: not found: value lenght
		crab(levels-1 , lenght/Math.sqrt(2))
                                ^