recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
	if(levels==0) {
		avance(length)
	} 
	else {
		crab(levels-1 , lenght/Math.sqrt(2))
	}
}
